// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages/user-billing-bulk-update/new.vue should be rendered correctly 1`] = `
<div
  breadcrumbs="[object Object],[object Object]"
  class="z-page-stub"
  compact="compact"
>
  <div
    class="z-page-stub-slot-tabs"
  />
  <div
    class="z-page-stub-slot-title"
  />
  <!---->
  <form
    class="v-form"
    data-form=""
    novalidate="novalidate"
  >
    <div>
      <div
        class="z-form-card-stub"
        title="全銀ファイルアップロード"
      >
        <div
          class="z-form-card-stub-slot-actions"
        />
        <z-form-card-item-set-stub
          icon=""
          label=""
          noicon="true"
        >
          <p>
            全銀ファイルを選択し《アップロード》ボタンを押してください。
          </p>
        </z-form-card-item-set-stub>
        <z-form-card-item-set-stub
          icon="M6,2A2,2 0 0,0 4,4V20A2,2 0 0,0 6,22H18A2,2 0 0,0 20,20V8L14,2H6M6,4H13V9H18V20H6V4M8,12V14H16V12H8M8,16V18H13V16H8Z"
          label=""
        >
          <div
            class="root"
            data-file=""
            data-z-form-card-item=""
          >
            <div
              class="v-input v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined v-text-field--placeholder v-file-input"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                  style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                >
                  <fieldset
                    aria-hidden="true"
                  >
                    <legend
                      style="width: 0px;"
                    >
                      <span
                        class="notranslate"
                      >
                        ​
                      </span>
                    </legend>
                  </fieldset>
                  <div
                    class="v-text-field__slot"
                  >
                    <label
                      class="v-label theme--light"
                      style="left: 0px; position: absolute;"
                    >
                      ファイル *
                    </label>
                    <div
                      class="v-file-input__text v-file-input__text--placeholder"
                    />
                    <input
                      data-file=""
                      type="file"
                    />
                  </div>
                  <div
                    class="v-input__append-inner"
                  >
                    <div />
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <transition-group-stub
                      class="v-messages__wrapper"
                      name="message-transition"
                      tag="div"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </z-form-card-item-set-stub>
        <div
          class="root"
          data-z-action-button=""
        >
          <a
            class="font-weight-bold white--text v-btn-stub"
            color="primary"
            depressed=""
            type="submit"
          >
            <v-icon-stub
              left=""
            >
              M14,13V17H10V13H7L12,8L17,13M19.35,10.03C18.67,6.59 15.64,4 12,4C9.11,4 6.6,5.64 5.35,8.03C2.34,8.36 0,10.9 0,14A6,6 0 0,0 6,20H19A5,5 0 0,0 24,15C24,12.36 21.95,10.22 19.35,10.03Z
            </v-icon-stub>
            <span>
              アップロード
            </span>
          </a>
        </div>
        <div
          class="z-form-card-stub-slot-header"
        />
      </div>
    </div>
  </form>
</div>
`;

exports[`pages/user-billing-bulk-update/new.vue upload should display errors when server responses 400 Bad Request (error occurred in "file") 1`] = `
<div
  class="root"
  data-file=""
  data-z-form-card-item=""
>
  <div
    class="v-input v-input--has-state v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined v-text-field--placeholder v-file-input error--text"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
        style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
      >
        <fieldset
          aria-hidden="true"
        >
          <legend
            style="width: 0px;"
          >
            <span
              class="notranslate"
            >
              ​
            </span>
          </legend>
        </fieldset>
        <div
          class="v-text-field__slot"
        >
          <label
            class="v-label theme--light error--text"
            style="left: 0px; position: absolute;"
          >
            ファイル *
          </label>
          <div
            class="v-file-input__text v-file-input__text--placeholder"
          />
          <input
            data-file=""
            type="file"
          />
        </div>
        <div
          class="v-input__append-inner"
        >
          <div />
        </div>
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light error--text"
          role="alert"
        >
          <transition-group-stub
            class="v-messages__wrapper"
            name="message-transition"
            tag="div"
          >
            <div
              class="v-messages__message"
            >
              ファイルが不正です。
            </div>
          </transition-group-stub>
        </div>
      </div>
    </div>
  </div>
</div>
`;
